Tue Sep  5 00:23:26 CEST 2006 (tk)
----------------------------------
  * clamd: all commands can be now prefixed with the letter 'n' (eg. nSCAN) to
	   to indicate that they will be delimited by a new line character
	   (which assures that the complete command and its entire argument
	   will be processed as a single command)
	   Patch from Mark Pizzolato <clamav-devel*subscriptions.pizzolato.net>

Mon Sep  4 21:06:52 CEST 2006 (tk)
----------------------------------
  * libclamav/unrar/unrarvm.c: fix possible crash reported by Sven

Sat Sep  2 20:56:52 CEST 2006 (tk)
----------------------------------
  * libclamav/others.c: apply VS2005 fix from NJH

Sat Sep  2 20:16:26 CEST 2006 (tk)
----------------------------------
  * libclamav/unrar: more bugfixes

Thu Aug 31 21:43:09 CEST 2006 (tk)
----------------------------------
  * libclamav/unrar: improve error handling

Thu Aug 31 14:49:42 BST 2006 (njh)
----------------------------------
  * libclamav/pe.c:	Added Windows support (with permission from ACAB)

Thu Aug 31 00:37:10 CEST 2006 (tk)
----------------------------------
  * freshclam: minor code cleanup

Wed Aug 30 23:20:42 CEST 2006 (tk)
----------------------------------
  * configure: check for socklen_t and define it if needed

Sun Aug 27 19:48:17 CEST 2006 (tk)
----------------------------------
  * freshclam: apply timeout patch from Everton da Silva Marques
	       <everton*lab.ipaccess.diveo.net.br>

Sun Aug 27 10:52:55 BST 2006 (njh)
----------------------------------
  * libclamav/blob.c:	Don't use % in filenames on Windows, since cmd.exe
				uses that to start environment variables
			Reported by Nico <tbb*hideout.ath.cx>

Sat Aug 26 23:41:08 CEST 2006 (tk)
----------------------------------
  * libclamav/mspack: fix double close of file descriptor, patch from NJH

Fri Aug 25 21:23:59 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: "Cache-Control: no-cache" is now disabled by default.