@@ -22,7 +22,6 @@
 #ifndef __CLAMUKO_H
 #define __CLAMUKO_H
 
-/* short int clamuko_running, clamuko_scanning; */
 short int clamuko_scanning;
 void *clamukoth(void *arg);
 
