@@ -27,20 +27,21 @@
 #include <sys/socket.h>
 #include <sys/stat.h>
 #include <sys/un.h>
-#include <clamav.h>
 #include <errno.h>
 
-#include "options.h"
-#include "cfgparser.h"
+#include "libclamav/clamav.h"
+
+#include "shared/options.h"
+#include "shared/cfgparser.h"
+
 #include "others.h"
 #include "server.h"
 #include "output.h"
 
-int localserver(const struct cfgstruct *copt, struct cl_node *root)
+int localserver(const struct cfgstruct *copt)
 {
 	struct sockaddr_un server;
 	int sockfd, backlog;
-	struct cfgstruct *cpt;
 	struct stat foo;
 	char *estr;
 
@@ -50,40 +51,41 @@ int localserver(const struct cfgstruct *copt, struct cl_node *root)
 
     if((sockfd = socket(AF_UNIX, SOCK_STREAM, 0)) == -1) {
 	estr = strerror(errno);
-	/* 
-	fprintf(stderr, "ERROR: socket() error: %s\n", estr);
-	*/
 	logg("!Socket allocation error: %s\n", estr);
-	exit(1);
+	return -1;
     }
 
     if(bind(sockfd, (struct sockaddr *) &server, sizeof(struct sockaddr_un)) == -1) {
 	if(errno == EADDRINUSE) {
 	    if(connect(sockfd, (struct sockaddr *) &server, sizeof(struct sockaddr_un)) >= 0) {
-		close(sockfd);
 		logg("!Socket file %s is in use by another process.\n", server.sun_path);
-		exit(1);
+		close(sockfd);
+		return -1;
 	    }
 	    if(cfgopt(copt, "FixStaleSocket")->enabled) {
 		logg("^Socket file %s exists. Unclean shutdown? Removing...\n", server.sun_path);
 		if(unlink(server.sun_path) == -1) {
 		    estr = strerror(errno);
 		    logg("!Socket file %s could not be removed: %s\n", server.sun_path, estr);
-		    exit(1);
+		    close(sockfd);
+		    return -1;
 		}
 		if(bind(sockfd, (struct sockaddr *) &server, sizeof(struct sockaddr_un)) == -1) {
 		    estr = strerror(errno);
 		    logg("!Socket file %s could not be bound: %s (unlink tried)\n", server.sun_path, estr);
-		    exit(1);
+		    close(sockfd);
+		    return -1;
 		}
 	    } else if(stat(server.sun_path, &foo) != -1) {
 		logg("!Socket file %s exists. Either remove it, or configure a different one.\n", server.sun_path);
-		exit(1);
+		close(sockfd);
+		return -1;
 	    }
 	} else {
 	    estr = strerror(errno);
 	    logg("!Socket file %s could not be bound: %s\n", server.sun_path, estr);
-	    exit(1);
+	    close(sockfd);
+	    return -1;
 	}
     }
 
@@ -94,11 +96,9 @@ int localserver(const struct cfgstruct *copt, struct cl_node *root)
 
     if(listen(sockfd, backlog) == -1) {
 	estr = strerror(errno);
-	/*
-	fprintf(stderr, "ERROR: listen() error: %s\n", estr);
-	*/
 	logg("!listen() error: %s\n", estr);
-	exit(1);
+	close(sockfd);
+	return -1;
     }
 
     return sockfd;
