@@ -38,8 +38,8 @@
 #define CMD11 "SHUTDOWN"
 #define CMD12 "FD"
 
-#include <clamav.h>
-#include "cfgparser.h"
+#include "libclamav/clamav.h"
+#include "shared/cfgparser.h"
 
 int command(int desc, const struct cl_node *root, const struct cl_limits *limits, int options, const struct cfgstruct *copt, int timeout);
 
